--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -122,6 +122,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     min-height: 100vh;
+    min-height: 100lvh;
     background-color: var(--bg);
     transition: background var(--transition-slow);
   }
